# utils

./: LICENSE  README.md  export_repo_to_txt.py  file_list.txt  links.yaml  notion_to_pdf.py  pyproject.toml  requirements.txt  scrape.py
brain/: test_ts.ipynb
export_repo/: CLAUDE.md  export_repo_export.txt  export_repo_to_txt.py  new_export_repo_prompts.xml  plan0.md  readme.md
export_repo/configs/: autocrop.json  bulk_dl.json  cosm-c360-data.json  cosm-c360-tools.json  export_repo.json  ezmd.json  flash-attn.json  h5merge-mini.json  h5merge.json  hFormer-COPAP.json  hFormer-Dyn.json  hFormer-codeOnly.json  hFormer-configs.json  hFormer-configsDyn.json  hFormer-models-codeOnly.json  hFormer-models.json  hFormer-modelsDyn.json  hFormer-modelsPruned-codeOnly.json  hFormer-modelsPrunedInv-codeOnly.json  hFormer-serve.json  hFormer-tests.json  hFormer.json  hFormer0-serve.json  ibrida.json  ibridaDB_v0.json  ibridaDB_v0r1_export.json  ibridaDB_v0r1_ingest.json  ibridaDB_v0rX.json  ibridaV2.json  ibridaV2_generator.json  ibrida_analysis.json  ibrida_hdf5.json  ladybird_data.json  linnaeus-autobatch.json  linnaeus-deployment-med0.json  linnaeus-deployment-mini.json  linnaeus-deployment-mini2.json  linnaeus-deployment-notes.json  linnaeus-deploymentMini.json  linnaeus-deploymentXL.json  (+74 more)
export_repo/configs/stale/: autocrop.json  autocropper.json  convnext.json  ezprompt.json  h5merge.json  (+28 more)
export_repo/context/: uv_med_export.xml  uv_mini_export.xml  uv_xl_export.xml
hf/: download_folder.py  upload_folder.py
ibrida/: density.py  density.sh  ibrida_export.txt  rsync_img_samples.sh  rsync_snips.md  sync_snips.md
ladybird/: decode.md  ts_to_mp4.py
ruthie/: generate_gifs.md  generate_gifs.py  generate_gifs.sh
sys/: README.md  smart-report.sh  stausee-report.sh
test_output/: test_export_output.txt
test_repo_external_1/: external_file1.md
test_repo_external_1/ext1_subdir/: external_py_file.py
test_repo_external_2/: external_file2.txt
test_repo_main/: main_file.py
test_repo_main/subdir_repo/: repo_subdir_file.txt
