[project]
name = "utils"
version = "0.1.0"
description = "Utility tools including repository export functionality"
requires-python = ">=3.10"
dependencies = [
    "asttokens>=2.4.1",
    "attrs>=23.2.0",
    "beautifulsoup4>=4.12.3",
    "bleach>=6.1.0",
    "certifi>=2024.2.2",
    "charset-normalizer>=3.3.2",
    "comm>=0.2.2",
    "debugpy>=1.8.1",
    "decorator>=5.1.1",
    "defusedxml>=0.7.1",
    "exceptiongroup>=1.2.1",
    "executing>=2.0.1",
    "fastjsonschema>=2.20.0",
    "filelock>=3.14.0",
    "fsspec>=2024.5.0",
    "huggingface-hub>=0.23.1",
    "idna>=3.7",
    "ipykernel>=6.29.4",
    "ipython>=8.25.0",
    "jedi>=0.19.1",
    "Jinja2>=3.1.4",
    "jsonschema>=4.23.0",
    "jsonschema-specifications>=2023.12.1",
    "jupyter_client>=8.6.2",
    "jupyter_core>=5.7.2",
    "jupyterlab_pygments>=0.3.0",
    "MarkupSafe>=2.1.5",
    "matplotlib-inline>=0.1.7",
    "mistune>=3.0.2",
    "nbclient>=0.10.0",
    "nbconvert>=7.16.4",
    "nbformat>=5.10.4",
    "nest-asyncio>=1.6.0",
    "numpy>=1.26.4",
    "packaging>=24.0",
    "pandocfilters>=1.5.1",
    "parso>=0.8.4",
    "pexpect>=4.9.0",
    "pillow>=10.3.0",
    "platformdirs>=4.2.2",
    "prompt_toolkit>=3.0.47",
    "psutil>=5.9.8",
    "ptyprocess>=0.7.0",
    "pure-eval>=0.2.2",
    "Pygments>=2.18.0",
    "python-dateutil>=2.9.0.post0",
    "PyYAML>=6.0.1",
    "pyzmq>=26.0.3",
    "referencing>=0.35.1",
    "requests>=2.32.2",
    "rich>=13.7.0",
    "rpds-py>=0.19.1",
    "six>=1.16.0",
    "soupsieve>=2.5",
    "stack-data>=0.6.3",
    "tiktoken>=0.6.0",
    "tinycss2>=1.3.0",
    "tornado>=6.4.1",
    "tqdm>=4.66.4",
    "traitlets>=5.14.3",
    "typing_extensions>=4.11.0",
    "urllib3>=2.2.1",
    "wcwidth>=0.2.13",
    "webencodings>=0.5.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["export_repo"] 